# citeseer

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  compose.yaml  compose.yml  docker-compose.yml  drizzle.config.ts  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json
.gemini/: settings.json
.github/workflows/: ci.yaml
WWT/: .env  .env.example  debug_schema.py  docker-compose.yml  pyproject.toml
WWT/data/: analytics.sqlite-journal
WWT/grafana/provisioning/datasources/: duckdb.yml
WWT/health/: merge_data.py
WWT/scripts/: generate_sample_data.py
WWT/src/: __init__.py  main.py
WWT/src/compiler/: __init__.py  gemini.py  prompts.py  validator.py
WWT/src/grafana/: __init__.py  api.py  generator.py
WWT/src/ingestion/: __init__.py  loader.py  profiler.py
WWT/src/orchestration/: __init__.py  executor.py
WWT/src/toon/: __init__.py  parser.py  schemas.py  serializer.py
WWT/src/web/: __init__.py  routes.py
WWT/src/web/templates/: base.html  index.html
WWT/src/web/templates/components/: error.html  overview.html  refusal.html  result.html  tables.html
WWT/tests/: conftest.py  test_compiler.py  test_grafana.py  test_ingestion.py  test_toon.py  verify_relationships.py
app/: .env.example  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
app/scripts/: setup.ts
app/src/: app.d.ts  hooks.server.ts
data/: demo.json  demo.json.bak
scripts/: setup.ts
src/: app.d.ts  hooks.server.ts  instrumentation.server.ts
src/lib/: auth.ts
(+141 files in other folders)
